# Notebooks

./: .gitignore  BP_analyses.ipynb  OIL_analyses.ipynb  README.md  backtesting.ipynb  pyproject.toml  update_ver.py
notebooks/: BP_analyses.ipynb  backtesting.ipynb
sample/: Untitled.ipynb  Untitled1.ipynb  analyses.ipynb  backtesting.ipynb  backtesting_2.ipynb  comparison.ipynb  crypto_analyses.ipynb  crypto_backtest.ipynb  crypto_backtesting.ipynb  crypto_multiple_backtesting.ipynb  macro_data.ipynb  personal_txns.ipynb  test-Copy1.ipynb  test.ipynb  test_2.ipynb
scripts/: simulate_client.py  simulate_exchange_data.py
src/: __init__.py  binance.py  crypto_data.py  indicators.py  plotting.py  rest_client.py  stlouisfed.py  strategies.py  utils.py
src/strategies/: b_testing_strats.py  b_trader_strats.py
