[tool.poetry]
name = "notebooks"
version = "v0.4.1"
description = "Collection of jupyter notebooks"
authors = ["Ivan Kyulev"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.2.3"
yfinance = "^0.2.33"
notebook = "^7.0.6"
ipykernel = "^6.27.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
backtesting = "^0.3.3"
pyarrow = "^15.0.0"
bokeh = "2.4.3"
backtrader = "^1.9.78.123"
python-dotenv = "^1.0.1"
numba = "^0.59.1"
vectorbt = "^0.26.1"
ta = "^0.11.0"
binance-historical-data = "^0.1.14"
scipy = "^1.14.1"
stumpy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
